# llm-test-framework-template

./: .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app/: llm_chain.py  llm_interface.py  similarity.py
dashboard/: metrics_summary.py
data/: golden_answers.json
tests/: test_chain_integration.py  test_completeness.py  test_cost.py  test_inference_trace.py  test_jailbreak.py  test_performance.py  test_prompts.py  test_regression.py  test_semantics.py
