[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.py$'
exclude = '''
/(
    \.venv
  | __pycache__
  | build
  | dist
  | .*\.egg-info
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist"]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # ignore line too long, Black already handles it
fix = true

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["app", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]
env_files = [".env"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

